feat(account): 新增更新账户信息接口
