# pkg/router/routes/account.go
@@ -20,6 +20,7 @@ func RegisterAccountRoutes(r ...*echo.Group) {
 	accountGroupV1.POST("/getAccount", account.GetAccount, auth_middleware.AuthMiddleware())
 	accountGroupV1.POST("/registerAccount", account.RegisterAcc)
 	accountGroupV1.POST("/loginAccount", account.LoginAccount)
+	accountGroupV1.POST("/updateAccount", account.UpdateAccount, auth_middleware.AuthMiddleware())
 	accountGroupV1.POST("/logoutAccount", account.LogoutAccount, auth_middleware.AuthMiddleware())
 	accountGroupV1.POST("/resetPassword", account.ResetPassword, auth_middleware.AuthMiddleware())
 }
